# amargo

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: build.rs  config.rs  error.rs  main.rs  tool.rs
templates/: main.c
tests/: tests.sh
