[package]
name = "amargo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
console = "0.14.1"
educe = { version = "0.4.18", features = ["Default"] }
indicatif = "0.16.2"
parse-display = "0.5.2"
regex = "1.5.4"
tokio = { version = "1.12.0", features = ["process"] }
walkdir = "2.3.2"
which = "4.2.2"
