[package]
name = "amargo"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.1.0"
concolor-clap = "0.0.9"
console = "0.14.1"
educe = { version = "0.4.18", features = ["Default"] }
include_dir = "0.7.2"
indicatif = "0.16.2"
log = "0.4.14"
parse-display = "0.5.2"
pretty_env_logger = "0.4.0"
regex = "1.5.4"
serde = { version = "1.0.136", features = ["derive"] }
tokio = { version = "1.12.0", features = ["process"] }
toml = "0.5.8"
walkdir = "2.3.2"
which = "4.2.2"

[features]
